	PR gas/12698 	* config/tc-arm.c (parse_psr): Set m_profile to false when 	assembling for any architecture.